# roboptim-core-plugin-qpoases

./: .travis.yml  CMakeLists.txt  README.md
include/roboptim/core/plugin/qpoases/: qpoases.hh
src/: CMakeLists.txt  qpoases.cc
tests/: CMakeLists.txt
